Receive data from N8N

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
-version: "3"
-
 services:
+  postgres:
+    image: postgres:15
+    restart: always
+    ports:
+      - "5433:5432"  # Externo:5433 → Interno:5432
+    environment:
+      POSTGRES_USER: n8n_user
+      POSTGRES_PASSWORD: n8n_pass
+      POSTGRES_DB: n8n
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - n8n_network
+
   n8n:
     image: n8nio/n8n
     ports:
@@ -13,6 +25,23 @@ services:
       - N8N_HOST=localhost
       - N8N_PORT=5678
       - N8N_SECURE_COOKIE=false
+      - DB_TYPE=postgresdb
+      - DB_POSTGRESDB_HOST=postgres
+      - DB_POSTGRESDB_PORT=5432       # Porta interna do container postgres
+      - DB_POSTGRESDB_DATABASE=n8n
+      - DB_POSTGRESDB_USER=n8n_user
+      - DB_POSTGRESDB_PASSWORD=n8n_pass
       - TZ=America/Sao_Paulo
+    depends_on:
+      - postgres
     volumes:
       - ./n8n_data:/home/node/.n8n
+    networks:
+      - n8n_network
+
+volumes:
+  postgres_data:
+  
+networks:
+  n8n_network:
+    driver: bridge
