--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5446",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 5446",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "@types/crypto-js": "^4.2.2",
+    "@types/form-data": "^2.2.1",
+    "@types/formidable": "^3.4.5",
+    "@types/multiparty": "^4.2.1",
     "crypto-js": "^4.2.0",
+    "form-data": "^4.0.2",
+    "formidable": "^3.5.4",
+    "multiparty": "^4.2.3",
     "next": "^14.0.0",
+    "prisma": "^6.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2"
