--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,11 +14,13 @@
     "@types/form-data": "^2.2.1",
     "@types/formidable": "^3.4.5",
     "@types/multiparty": "^4.2.1",
+    "@types/node-fetch": "^2.6.12",
     "crypto-js": "^4.2.0",
     "form-data": "^4.0.2",
     "formidable": "^3.5.4",
     "multiparty": "^4.2.3",
     "next": "^14.0.0",
+    "node-fetch": "^2.7.0",
     "prisma": "^6.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
