--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "@types/multiparty": "^4.2.1",
     "@types/node-fetch": "^2.6.12",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "form-data": "^4.0.2",
     "formidable": "^3.5.4",
     "multiparty": "^4.2.3",
