--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,7 +25,8 @@
     "prisma": "^6.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
