--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@types/formidable": "^3.4.5",
     "@types/multiparty": "^4.2.1",
     "@types/node-fetch": "^2.6.12",
+    "@types/uuid": "^10.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "form-data": "^4.0.2",
@@ -26,7 +27,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
