--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
     "@types/crypto-js": "^4.2.2",
@@ -26,6 +27,7 @@
     "date-fns": "^4.1.0",
     "form-data": "^4.0.2",
     "formidable": "^3.5.4",
+    "lucide-react": "^0.511.0",
     "multiparty": "^4.2.3",
     "next": "^14.0.0",
     "node-fetch": "^2.7.0",
@@ -36,7 +38,8 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.25.20"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
